syntax = "proto3";

package pb;

option go_package = "./pb";

service Database {
    rpc Get (GetRequest) returns (GetReply) {}

    rpc Update (UpdateRequest) returns (UpdateReply) {}

    rpc Add (AddRequest) returns (AddReply) {}

    rpc Remove (RemoveRequest) returns (RemoveReply) {}

    rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusReply) {}
}

message Document {
    string content = 1;
    string title = 2;
    string author = 3;
    string topic = 4;
    string watermark = 5;
}

message GetRequest {
    message Filters {
        string key = 1;
        string value = 2;
    }
    repeated Filters filters = 1;
}

message GetReply {
    repeated Document documents = 1;
    string Err = 2;
}

message UpdateRequest {
    string title = 1;
    Document document = 2;
}

message UpdateReply {
    string err = 1;
}

message AddRequest {
    Document document = 1;
}

message AddReply {
    string err = 1;
}

message RemoveRequest {
    string title = 1;
}

message RemoveReply {
    string err = 1;
}

message ServiceStatusRequest {}

message ServiceStatusReply {
    int64 code = 1;
    string err = 2;
}
